xml/src2/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Adv_Course_of_Study_Credit_Hours__c</fullName>
        <description>Total Credit Hours for Adv Course of Study for each of the contacts</description>
        <label>Adv.Course of Study Credit Hours</label>
        <summarizedField>Course_Record__c.Credit_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Course_Record__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Advanced Course of Study</value>
        </summaryFilterItems>
        <summaryForeignKey>Course_Record__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Advance_Course_Of_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advance course of study Transcripts</description>
        <label>Advance Course Of Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Category__c</fullName>
        <description>Age Category</description>
        <inlineHelpText>Data is accurate for GBHEM Board of Directors. 
Youth 12-16
Young Adults 17-28
Adults 29-65
Older Adults 65+</inlineHelpText>
        <label>Age Category</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Youth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Young Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Older Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age trigger pop up field</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Conference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A geographical area and organization. Defines a region that includes all UM churches and ministries in that area.</description>
        <inlineHelpText>Enter contact&apos;s home annual conference (where membership held)</inlineHelpText>
        <label>Annual Conference</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment_Conference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Most clergy will serve in the annual conference where their membership is held.  However, those in Extension Ministry/ABLC could serve in a different annual conference than where their membership is.Only clergy members should have an assigned Appointment Conference.  The Annual Conference where Contact is appointed to serve.</description>
        <inlineHelpText>If different from Annual Conference, enter annual conference where contact is appointed (working conference)</inlineHelpText>
        <label>Appointment Conference</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Working Conference)</relationshipLabel>
        <relationshipName>Working_Conference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment__c</fullName>
        <description>Appointments for the contact</description>
        <label>Appointment</label>
        <picklist>
            <controllingField>Ministry_Category__c</controllingField>
            <picklistValues>
                <fullName>Local Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beyond the Local Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attend School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Membership Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Terminated by AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to Licensed or Ordained Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments any on Contacts</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Line1__c</fullName>
        <description>Contact address Line 1 From Address</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Line2__c</fullName>
        <description>Contact address Line 2 from address</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <description>Contact city from Address city</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship for the formula fields</description>
        <label>Contact_Milestone</label>
        <referenceTo>Milestones__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts_Milestone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <description>Contact State from Address State or State other</description>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zip_Postal_Code__c</fullName>
        <description>Contact Zip postal code from Address Zip Postal Code through Apex</description>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_of_Study_Credit_Hours__c</fullName>
        <description>Roll up of all the Course of study Credit Hours for each of the contacts</description>
        <label>Course of Study Credit Hours</label>
        <summarizedField>Course_Record__c.Credit_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Course_Record__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Course of Study</value>
        </summaryFilterItems>
        <summaryForeignKey>Course_Record__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Course_of_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Course of study Transcripts</description>
        <label>Course of Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB_Month__c</fullName>
        <description>DOB Month from Milestone</description>
        <label>DOB Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <label>Date of Birth</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Death_Date__c</fullName>
        <description>Death date: Pop up&apos;s through trigger from Milestone object</description>
        <label>Death Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denomination_Other__c</fullName>
        <description>Other than Denominations in The Picklist Denominations</description>
        <label>Denomination (Other/Specify)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denomination__c</fullName>
        <description>Denominations of Contact</description>
        <inlineHelpText>Select the contact&apos;s denominational group (family)</inlineHelpText>
        <label>Denomination</label>
        <picklist>
            <picklistValues>
                <fullName>United Methodist Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African Methodist Episcopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African Methodist Episcopal Zion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian Methodist Episcopal Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congregational Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Methodist Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methodist, Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missionary Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primitive Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reformed Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wesleyan Methodist Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>“Evangelical” Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>“Traditional” Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventist, Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventist (Seventh Day)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Baptist Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Baptist Churches in USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Lutheran Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anabaptist, Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anabaptist (Brethren, Mennonite)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglican/Episcopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglican/Episcopal, Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglican Church (Church of England)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglican Orthodox Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apostolic Christian Church</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When a District is selected,Annual Conference and Jurisdiction should select automatically.
The UMC District that the Contact belongs to or where they are serving. The districts in an annual conference varies depends on the size of the Annual conference.Typically 60–80 churches are in a district. Each district is supervised by a district superintendent and Each church or other ministry setting in an annual conference is part of a district.</description>
        <inlineHelpText>Select district where appointed</inlineHelpText>
        <label>District</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (District (Organization))</relationshipLabel>
        <relationshipName>District_Members_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Relating to GBHEM Board of Directors</description>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dual_Appointment__c</fullName>
        <description>Second appointment for the Ministry Category Contacts</description>
        <inlineHelpText>If dual appointed, enter second appointment here.</inlineHelpText>
        <label>Dual Appointment</label>
        <picklist>
            <controllingField>Ministry_Category__c</controllingField>
            <picklistValues>
                <fullName>Local Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beyond the Local Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attend School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Membership Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Terminated by AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to Licensed or Ordained Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <description>Emergency Contact Name for Contacts</description>
        <label>Emergency Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Number__c</fullName>
        <description>Emergency Contact Number for Contacts</description>
        <label>Emergency Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Create_Date__c</fullName>
        <description>Create Date of the Person Record in the Data Center.Historic Data Field</description>
        <label>GBHEM DataCenter Create Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Modify_Date__c</fullName>
        <description>GBHEM Data center last Modified date.Read only Field.Historic Data</description>
        <label>GBHEM DataCenter Modify Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Person_ID__c</fullName>
        <description>GBHEM Data Center Person ID.Historical Data .Read Only</description>
        <externalId>true</externalId>
        <label>GBHEM DataCenter Person ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Spouse_Person_ID_c__c</fullName>
        <label>GBHEM_DataCenter_Spouse_Person_ID__c</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBHEM_Datacenter_Modify_User__c</fullName>
        <description>GBHEM  Data center Last Modified User.Historic Data.Read only</description>
        <label>GBHEM Datacenter Modify_User</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCFA_Label_ID__c</fullName>
        <description>External application.we have refrence the person id in GCFA to GBHEM.It is provided by GCFA.In future should integrate this.</description>
        <label>GCFA Label ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of the Contact</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generational__c</fullName>
        <description>Suffix after a name to indicate relationship to family - Sr, Jr, III, II, etc.
Like Relation Field in Data Center</description>
        <label>Generational</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Airport__c</fullName>
        <description>GBHEM Board of Directors</description>
        <label>Home Airport</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>A unique searchable contact id.</description>
        <displayFormat>C-{0000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A unique searchable contact id.</inlineHelpText>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Jurisdictions in U.S. (North Central, Northeast, South Central, Southeast, and Western).A group of annual conferences within a geographical region in the United States.</description>
        <inlineHelpText>Auto-populated from annual conference</inlineHelpText>
        <label>Jurisdiction</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jurisdiction</relationshipLabel>
        <relationshipName>Jurisdiction_People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Letter_Name__c</fullName>
        <description>Salutation Missing</description>
        <formula>IF((ISPICKVAL(Salutation , &apos;Missing&apos;) || ISBLANK(TEXT(Salutation) )) ,
(FirstName + &apos;  &apos; +  LastName), 
IF(ISPICKVAL(Salutation , &apos;The Hon.&apos;), 
(&apos;Hon.&apos; + &apos;  &apos;+ LastName), 
IF(ISPICKVAL(Salutation , &apos;The Rev.&apos;), 
(&apos;Rev.&apos; + &apos;  &apos;+ LastName), 
 IF(ISPICKVAL(Salutation , &apos;The Rev. Dr.&apos;),
(&apos;Rev. Dr.&apos; + &apos;  &apos;+ LastName),
 IF(ISPICKVAL(Salutation , &apos;The Rev. Prof.&apos;), 
(&apos;Rev. Prof.&apos; +  &apos;  &apos;+ LastName),
(TEXT(Salutation) + &apos;  &apos;+ LastName )) ) ) ) )</formula>
        <label>Letter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <description>Contact&apos;s Marital status</description>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle Name of the Contact</description>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Key__c</fullName>
        <label>Migration Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship for Formulas</description>
        <label>Milestone</label>
        <referenceTo>Milestones__c</referenceTo>
        <relationshipLabel>Contacts (Milestone)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Military_Rank_Other_Specify__c</fullName>
        <description>Military Rank(Other/Specify)</description>
        <label>Military Rank(Other/Specify)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Rank__c</fullName>
        <description>Military Rank</description>
        <label>Military Rank</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Second Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant Commander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lieutenant Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brigadier General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear Admiral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admiral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Specify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ministry_Category__c</fullName>
        <description>Ministry Category of the Contacts</description>
        <inlineHelpText>Only select lay person if no other Ministry Category applies</inlineHelpText>
        <label>Ministry Category</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate Member with a Vote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bishop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Deacon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Elder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Local Pastor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Lay Minister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deacon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diaconal Minister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Time Local Pastor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lay Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minister Other Denomination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-Time Local Pastor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional Deacon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional Elder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>Phone Extension</description>
        <label>Phone Extension</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>The Preferred Name is the name that a person prefer&apos;s for communication purposes.</description>
        <inlineHelpText>Enter nickname or other name appropriate for greeting</inlineHelpText>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <description>Primary Language of the Contact</description>
        <inlineHelpText>Select primary language spoken by contact</inlineHelpText>
        <label>Primary Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acholi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afrikaans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amharic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arakanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assyrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azeri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahasa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bajuni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bambara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behdini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belorussian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burmese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantonese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaldean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R_Licensing_School__c</fullName>
        <description>For Reports</description>
        <label>R Licensing School</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_PreferredName_Name__c</fullName>
        <description>If preferred name has a value It gets displayed or the Name field is Displayed</description>
        <formula>IF( (Preferred_Name__c !=null), (TEXT(Salutation) + &apos; &apos;+Preferred_Name__c + &apos; &apos;+ LastName ), (TEXT(Salutation) + &apos; &apos;+ FirstName + &apos; &apos;+  Middle_Name__c + &apos; &apos;+ LastName ))</formula>
        <label>PreferredName/Name</label>
        <type>Text</type>
    </fields>
</CustomObject>